# downzer

./: Cargo.toml  HOTFIX_HANG.md  MODES.md  PROGRESS.md  README.md  README_UPDATE.md
assets/sounds/: tap.m4a  tap2.m4a
src/: ipc.rs  main.rs
src/audio/: sound.rs
src/core/: db.rs  downzer.rs  mod.rs  task.rs  worker.rs
src/modes/: download.rs  mod.rs  network.rs  portscan.rs  webrequest.rs
src/ui/: config_ui.rs  mod.rs
