[package]
name = "downzer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "gzip", "rustls-tls"], default-features = false }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
colored = "2.1"
notify-rust = "4.10"
regex = "1.10"
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_rusqlite = "0.35"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dirs = "5.0"
interprocess = "2.0"
ctrlc = "3.4"
